--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
               <a href="index.html">
                 <button> Home </button>
                 </a>
-              <a href="Festivals.html"> 
+              <a href="festivals.html"> 
                 <button> Festival </button>
                 </a>
-              <a href="Foods.html"> 
+              <a href="foods.html"> 
                 <button> Food </button>
                 </a>
-              <a href="Places.html">
+              <a href="places.html">
                 <button> Places </button>
               </a>
               <br>
